feat: add cosy TTS Python extension (#1252)
* feat: add Cosy TTS configuration and enhance Tencent TTS error handling

* feat: implement Cosy TTS client and enhance audio processing capabilities

* chore: update Tencent TTS manifest and improve logging messages

* refactor: update type hints in Cosy TTS client and rename close method to stop; add initial test files for audio dump and text input end logic

* feat: add error handling for TTS failures and implement tests for invalid parameters

* feat: add unit tests for TTFB metrics in Cosy TTS extension

* feat: add unit test for parameter passthrough in Cosy TTS client

* feat: add robustness test for handling connection drops in Cosy TTS extension

* refactor: rename close method to stop in Tencent TTS client and update related tests for audio flushing and text input end logic

* feat: enhance error handling in Tencent TTS extension for authorization failures and improve test coverage for invalid parameters

* fix: increase timeout for receiving messages in Cosy TTS client and clarify test setup for invalid parameters

* feat: implement metrics testing for TTFB and audio frame reception in Tencent TTS extension

* chore: remove unnecessary blank lines in test files for Cosy and Tencent TTS extensions

* feat: implement parameter passthrough testing for Tencent TTS extension, ensuring custom parameters are correctly forwarded to the client

* feat: add robustness testing for connection recovery in Tencent TTS extension, ensuring proper handling of connection drops and successful reconnection

* feat: add black list parameter handling in Cosy and Tencent TTS configurations to improve sensitive data management

* feat: enhance error handling in Tencent TTS extension by adding support for invalid parameters and updating related error logging

* feat: enhance Tencent TTS extension with PCMWriter management and flush handling

* refactor: streamline PCMWriter management in Tencent TTS extension by introducing dedicated c

--- a/ai_agents/agents/ten_packages/extension/tencent_tts_python/manifest.json
+++ b/ai_agents/agents/ten_packages/extension/tencent_tts_python/manifest.json
@@ -22,6 +22,7 @@
       "**.tent",
       "**.py",
       "README.md",
+      "src/**",
       "tests/**"
     ]
   },
@@ -33,12 +34,6 @@
     ],
     "property": {
       "properties": {
-        "dump": {
-          "type": "bool"
-        },
-        "dump_path": {
-          "type": "string"
-        },
         "params": {
           "type": "object",
           "properties": {
