--- a/ai_agents/agents/ten_packages/extension/speechmatics_asr_python/manifest.json
+++ b/ai_agents/agents/ten_packages/extension/speechmatics_asr_python/manifest.json
@@ -1,7 +1,7 @@
 {
     "type": "extension",
     "name": "speechmatics_asr_python",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "dependencies": [
         {
             "type": "system",
@@ -60,5 +60,14 @@
                 }
             }
         }
+    },
+    "package": {
+        "include": [
+            "manifest.json",
+            "property.json",
+            "**.py",
+            "requirements.txt",
+            "docs/**"
+        ]
     }
 }
