feat: update package manifest

--- a/ai_agents/agents/ten_packages/extension/openai_llm2_python/manifest.json
+++ b/ai_agents/agents/ten_packages/extension/openai_llm2_python/manifest.json
@@ -18,15 +18,17 @@
     "include": [
       "manifest.json",
       "property.json",
-      "**.tent",
       "**.py",
-      "README.md"
+      "README.md",
+      "requirements.txt"
     ]
   },
   "api": {
-    "interface": [{
-      "import_uri": "../../system/ten_ai_base/api/llm-interface.json"
-    }],
+    "interface": [
+      {
+        "import_uri": "../../system/ten_ai_base/api/llm-interface.json"
+      }
+    ],
     "property": {
       "properties": {
         "api_key": {
