--- a/ai_agents/agents/ten_packages/extension/openai_tts2_python/manifest.json
+++ b/ai_agents/agents/ten_packages/extension/openai_tts2_python/manifest.json
@@ -1,7 +1,7 @@
 {
   "type": "extension",
   "name": "openai_tts2_python",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "dependencies": [
     {
       "type": "system",
@@ -22,7 +22,7 @@
       "**.tent",
       "**.py",
       "README.md",
-      "tests/**"
+      "requirements.txt"
     ]
   },
   "api": {
