--- a/ai_agents/agents/ten_packages/extension/openai_asr_python/requirements.txt
+++ b/ai_agents/agents/ten_packages/extension/openai_asr_python/requirements.txt
@@ -3,4 +3,5 @@ pytest
 websockets~=14.0
 openai>=1.99.3
 pydantic
-samplerate
+# the latest version need cmake and C++ 14 or above compiler i
+samplerate==0.1.0
