--- a/ai_agents/agents/ten_packages/extension/openai_asr_python/requirements.txt
+++ b/ai_agents/agents/ten_packages/extension/openai_asr_python/requirements.txt
@@ -3,5 +3,5 @@ pytest
 websockets~=14.0
 openai>=1.99.3
 pydantic
-# the latest version need cmake and C++ 14 or above compiler i
+# the latest version need cmake and C++ 14 or above compiler
 samplerate==0.1.0
