--- a/ai_agents/agents/ten_packages/extension/openai_asr_python/requirements.txt
+++ b/ai_agents/agents/ten_packages/extension/openai_asr_python/requirements.txt
@@ -1,6 +1,6 @@
 typing_extensions
 pytest
-websockets~=14.0
+websockets>=14.0
 openai>=1.99.3
 pydantic
 # the latest version need cmake and C++ 14 or above compiler
